# socket-multitheads

./: README.md
Program1/: CMakeLists.txt  main.cpp
Program1/Program1/: IProgram1.h  Program1.cpp  Program1.h
Program1/Program1/Thread/: IThread.h
Program1/Program1/Thread/Thread1/: Thread1.cpp  Thread1.h
Program1/Program1/Thread/Thread2/: Thread2.cpp  Thread2.h
Program2/: CMakeLists.txt  main.cpp
Program2/Program2/: IProgram2.h  Program2.cpp  Program2.h
